--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,10 @@
+[build-system]
+requires = ["setuptools >= 77.0.3"]
+build-backend = "setuptools.build_meta"
+
 [project]
 name = "openaleph"
-version = "1.0.0"
+version = "1.0.1"
 description = "Python client for the OpenAleph data API"
 readme = "README.md"
 requires-python = ">=3.7"
