--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools >= 77.0.3"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "openaleph"
+name = "openaleph-client"
 version = "1.0.1"
 description = "Python client for the OpenAleph data API"
 readme = "README.md"
@@ -12,6 +12,7 @@ license = { file = "LICENSE" }
 authors = [
   { name = "Data and Research Center - DARC", email = "hi@dataresearchcenter.org" },
 ]
+urls = { "Repository" = "https://github.com/dataresearchcenter/opal-client" }
 dependencies = [
   "banal>=1.0.1",
   "pyyaml",
