--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
   "requests_toolbelt>=1.0.0,<2.0.0",
   "urllib3>=1.26.0,<2.0.0",
   "click>=7.0,<9.0",
+  "sqlalchemy (>=2.0.36,<3.0.0)",
 ]
 classifiers = [
   "Programming Language :: Python :: 3",
