--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
   "urllib3>=1.26.0,<2.0.0",
   "click>=7.0,<9.0",
   "sqlalchemy (>=2.0.36,<3.0.0)",
+  "psycopg[pool] (>=3.2.9,<4.0.0)",
 ]
 classifiers = [
   "Programming Language :: Python :: 3",
